--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Игнорировать папку data (если она содержит временные данные)
 backend/data/
+backend/github.com
 
 # Игнорировать файлы логов (если они есть)
 *.log
